--- a/login.html
+++ b/login.html
@@ -34,56 +34,63 @@ const users = {
     username: 'Liam',
     password: 'password1',
     email: 'Liam!',
-    role: 'You have 3 tin credits',
+    role: 'You have 40 rations credits',
     bio: 'More features coming soon',
   },
   Johnny: {
     username: 'Johnsidus the Third',
     password: 'password2',
     email: 'Johnsidius the third!',
-    role: 'You have 3 tin credits',
+    role: 'You have 40 rations credits',
     bio: 'More features coming soon',
   },
   Kevin: {
     username: 'Kevin',
     password: 'password3',
     email: 'Kevin!',
-    role: 'you have 0 tin credits',
+    role: 'you have 40 rations credits',
     bio: 'More features coming soon',
   },
-     Noah: {
+    Noah: {
     username: 'Noah',
     password: 'noahchoi123',
     email: 'Noah!',
-    role: 'you have 100000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000 tin credits',
+    role: 'you have 40 rations credits',
     bio: 'More features coming soon',
   },
   Maks: {
     username: 'Maks',
     password: 'password4',
     email: 'Maks!',
-    role: 'you have 100000000000 tin credits',
+    role: 'you have 40 rations credits',
     bio: 'More features coming soon',
   },
   Charles: {
     username: 'Charles',
     password: 'password5',
     email: 'Charles!',
-    role: 'you have 100 tin credits',
+    role: 'you have 40 rations credits',
     bio: 'More features coming soon',
   },
   Taxo: {
     username: 'Maxo Taxo',
     password: 'password5',
     email: 'Maxo Taxo!',
-    role: 'you have 0 tin credits',
+    role: 'you have 40 rations credits',
     bio: 'More features coming soon',
   },
   Dayden: {
     username: 'Dayden',
     password: 'password6',
     email: 'Dayden!',
-    role: 'you have 0 tin credits',
+    role: 'you have 10 rations credits',
+    bio: 'More features coming soon',
+  },
+    Chris: {
+    username: 'Chris',
+    password: 'password7',
+    email: 'Chris!',
+    role: 'you have 40 rations credits',
     bio: 'More features coming soon',
   },
 };
