--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <h2>News</h2>
         <h3>War with Timland!</h3>
         <p>We have officially gone to war with Timland. Serving in the army is optional.</p>
+        <h3> First Rations Bag Bought</h3>
+        <p>The first rations bag has been bought! IT has 200 oreos and 200 dabaitu</p>
         <a href="military.html" class="button">Learn More</a>
       </div>
 
