--- a/nav.html
+++ b/nav.html
@@ -121,6 +121,7 @@
         <h2>Select the page you would like to go to:</h2>
 
         <div class="button-container">
+            <a href="translate.html" class="link-button">Tin Translate</a>
             <a href="tinapedia.html" class="link-button">Tinapedia</a>
             <a href="user-info.html" class="link-button">Your Page</a>
             <a href="funds.html" class="link-button">Funds</a>
