--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header> 
     <div class="container">
       <h1>Welcome to Tinland!</h1>
-      <h3>A land of the free</h3>
+      <h3>We love gyattttstststst</h3>
     </div>
   </header>
 
