--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header> 
     <div class="container">
       <h1>Welcome to Tinland!</h1>
-      <h3>We love gyattttstststst</h3>
+      <h3>A land of the free</h3>
     </div>
   </header>
 
@@ -22,6 +22,7 @@
         <li><a href="user-info.html">Your-Page</a></li>
         <li><a href="tinapedia.html">Tinapedia</a></li>
         <li><a href="bible.html">Church of Tin</a></li>
+        <li><a href="tinstock.html">Tin Stocks</a></li>
         <li><a href="nav.html">All Other Pages</a></li>
       </ul>
     </div>
