--- a/tinstock.html
+++ b/tinstock.html
@@ -6,81 +6,113 @@
     <style>
         body { font-family: Arial, sans-serif; text-align: center; }
         h1 { color: #4CAF50; }
-        .stock-price { font-size: 2em; margin-top: 20px; }
-        #stockChart { max-width: 1000px; max-height: 500px; margin: 20px auto; }
-        .tabs { display: flex; justify-content: center; margin-top: 20px; }
-        .tab { padding: 10px 20px; cursor: pointer; border: 1px solid #ccc; }
-        .tab.active { background-color: #4CAF50; color: white; }
+        .stock-price { font-size: 1.5em; margin-top: 20px; }
+        .stock-container { margin: 40px auto; }
+        .stock-graph { max-width: 800px; margin: 20px auto; }
+        .stock-name { font-size: 1.2em; margin-bottom: 10px; font-weight: bold; }
+        .event { color: red; font-weight: bold; }
     </style>
 </head>
 <body>
     <h1>Tinland Stock Tracker</h1>
-    <div class="stock-price" id="currentPrice">2.00 Ration Credits</div>
-    <div class="tabs">
-        <div class="tab active" onclick="setTimeFrame('1D')">1 Day</div>
-        <div class="tab" onclick="setTimeFrame('1W')">1 Week</div>
-        <div class="tab" onclick="setTimeFrame('1M')">1 Month</div>
-        <div class="tab" onclick="setTimeFrame('1Y')">1 Year</div>
+
+    <div class="stock-container">
+        <div class="stock-name"> Tinland Stock</div>
+        <div class="stock-price" id="tinlandPrice">2.00 Ration Credits ($0.67)</div>
+        <div id="tinlandEvent" class="event"></div>
+        <canvas id="tinlandChart" class="stock-graph"></canvas>
     </div>
-    <canvas id="stockChart"></canvas>
+
+    <div class="stock-container">
+        <div class="stock-name"> Rations Stock</div>
+        <div class="stock-price" id="rationsPrice">10.00 Ration Credits ($3.33)</div>
+        <div id="rationsEvent" class="event"></div>
+        <canvas id="rationsChart" class="stock-graph"></canvas>
+    </div>
+
+    <div class="stock-container">
+        <div class="stock-name"> Committee Stock</div>
+        <div class="stock-price" id="committeePrice">40.00 Ration Credits ($13.33)</div>
+        <div id="committeeEvent" class="event"></div>
+        <canvas id="committeeChart" class="stock-graph"></canvas>
+    </div>
 
     <script>
-        let stockPrice = parseFloat(localStorage.getItem('stockPrice')) || 2.00;
-        let priceHistory = JSON.parse(localStorage.getItem('priceHistory')) || [stockPrice];
-        let timeFrame = '1D';
+        const stockData = {
+            tinland: {
+                price: parseFloat(localStorage.getItem('tinlandPrice')) || 2.00,
+                history: JSON.parse(localStorage.getItem('tinlandHistory')) || [2.00],
+                range: [0.10, 20.00],
+                volatility: 0.2,
+                eventElement: 'tinlandEvent'
+            },
+            rations: {
+                price: parseFloat(localStorage.getItem('rationsPrice')) || 10.00,
+                history: JSON.parse(localStorage.getItem('rationsHistory')) || [10.00],
+                range: [5.00, 20.00],
+                volatility: 0.1,
+                eventElement: 'rationsEvent'
+            },
+            committee: {
+                price: parseFloat(localStorage.getItem('committeePrice')) || 40.00,
+                history: JSON.parse(localStorage.getItem('committeeHistory')) || [40.00],
+                range: [30.00, 50.00],
+                volatility: 0.05,
+                eventElement: 'committeeEvent'
+            }
+        };
 
-        function updateStockPrice() {
+        function persistStockData() {
+            localStorage.setItem('tinlandPrice', stockData.tinland.price.toFixed(2));
+            localStorage.setItem('tinlandHistory', JSON.stringify(stockData.tinland.history));
+            localStorage.setItem('rationsPrice', stockData.rations.price.toFixed(2));
+            localStorage.setItem('rationsHistory', JSON.stringify(stockData.rations.history));
+            localStorage.setItem('committeePrice', stockData.committee.price.toFixed(2));
+            localStorage.setItem('committeeHistory', JSON.stringify(stockData.committee.history));
+        }
+
+        function updateStockPrice(stock) {
+            const { range, eventElement, volatility } = stockData[stock];
             let change;
-            let randomValue = Math.random();
+            const randomEvent = Math.random();
+            let eventMessage = '';
 
-            if (randomValue < 0.1) {
-                change = stockPrice * (Math.random() * 0.5 + 0.5); 
-            } else if (randomValue < 0.3) {
-                change = -stockPrice * (Math.random() * 0.3 + 0.1); 
+            if (randomEvent < 0.02) {
+                change = stockData[stock].price * (Math.random() * 0.5 + 0.5);
+                eventMessage = '🚀 Market Boom!';
+            } else if (randomEvent < 0.04) {
+                change = -stockData[stock].price * (Math.random() * 0.5 + 0.5);
+                eventMessage = '📉 Market Crash!';
             } else {
-                change = (Math.random() - 0.5) * 2.0;
+                change = (Math.random() - 0.5) * stockData[stock].price * volatility;
             }
 
-            stockPrice = Math.min(20.00, Math.max(0.10, stockPrice + change));
-            document.querySelector('.stock-price').textContent = stockPrice.toFixed(2) + " Ration Credits";
+            stockData[stock].price = Math.min(range[1], Math.max(range[0], stockData[stock].price + change));
+            stockData[stock].history.push(stockData[stock].price);
+            if (stockData[stock].history.length > 365) stockData[stock].history.shift();
 
-            priceHistory.push(stockPrice);
-            if (priceHistory.length > 365) priceHistory.shift();
-            localStorage.setItem('stockPrice', stockPrice.toFixed(2));
-            localStorage.setItem('priceHistory', JSON.stringify(priceHistory));
-            updateChart();
+            persistStockData();
+
+            document.getElementById(`${stock}Price`).textContent = 
+                `${stockData[stock].price.toFixed(2)} Ration Credits ($${(stockData[stock].price / 3).toFixed(2)})`;
+
+            const eventDiv = document.getElementById(eventElement);
+            eventDiv.textContent = eventMessage;
+            setTimeout(() => { eventDiv.textContent = ''; }, 3000);
+            updateChart(stock);
         }
 
-        function setTimeFrame(tf) {
-            timeFrame = tf;
-            document.querySelectorAll('.tab').forEach(tab => tab.classList.remove('active'));
-            document.querySelector(`.tab[onclick="setTimeFrame('${tf}')"]`).classList.add('active');
-            updateChart();
-        }
-
-        function getVisibleHistory() {
-            let visibleHistory;
-            if (timeFrame === '1D') {
-                visibleHistory = priceHistory.slice(-24);
-            } else if (timeFrame === '1W') {
-                visibleHistory = priceHistory.slice(-168);
-            } else if (timeFrame === '1M') {
-                visibleHistory = priceHistory.slice(-720);
-            } else if (timeFrame === '1Y') {
-                visibleHistory = priceHistory;
-            }
-            return visibleHistory;
-        }
-
-        function updateChart() {
-            const ctx = document.getElementById('stockChart').getContext('2d');
-            const chart = new Chart(ctx, {
+        let charts = {};
+        function updateChart(stock) {
+            const ctx = document.getElementById(`${stock}Chart`).getContext('2d');
+            if (charts[stock]) charts[stock].destroy();
+            charts[stock] = new Chart(ctx, {
                 type: 'line',
                 data: {
-                    labels: Array.from({ length: getVisibleHistory().length }, (_, i) => i + 1),
+                    labels: Array.from({ length: stockData[stock].history.length }, (_, i) => i + 1),
                     datasets: [{
-                        label: 'Stock Price (Ration Credits)',
-                        data: getVisibleHistory(),
+                        label: `${stock.charAt(0).toUpperCase() + stock.slice(1)} Stock Price`,
+                        data: stockData[stock].history,
                         borderColor: 'rgba(75, 192, 192, 1)',
                         borderWidth: 1,
                         fill: false
@@ -88,20 +120,27 @@
                 },
                 options: {
                     scales: {
-                        y: {
-                            beginAtZero: true
-                        }
+                        y: { beginAtZero: true }
                     }
                 }
             });
         }
 
-        document.addEventListener('DOMContentLoaded', () => {
-            document.getElementById('currentPrice').textContent = stockPrice.toFixed(2) + " Ration Credits";
-            updateChart();
-        });
+        function initializeStocks() {
+            ['tinland', 'rations', 'committee'].forEach(stock => {
+                document.getElementById(`${stock}Price`).textContent = 
+                    `${stockData[stock].price.toFixed(2)} Ration Credits ($${(stockData[stock].price / 3).toFixed(2)})`;
+                updateChart(stock);
+            });
+        }
 
-        setInterval(updateStockPrice, 100000);
+        document.addEventListener('DOMContentLoaded', initializeStocks);
+
+        setInterval(() => {
+            updateStockPrice('tinland');
+            updateStockPrice('rations');
+            updateStockPrice('committee');
+        }, 5000);
     </script>
 </body>
 </html>
