--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="column">
         <h2>Donations</h2>
-        <p>We don't ask for money, but if you want to help, join us every Wednesday for a meetup at the library!</p>
+        <p>Tinland accepts donations of Cash, and candy.</p>
         <a href="donate.html" class="button">Learn More about Donations</a>
       </div>
     </section>
@@ -56,9 +56,10 @@
         <h2>News</h2>
         <h3>War with Timland!</h3>
         <p>We have officially gone to war with Timland. Serving in the army is optional.</p>
+        <a href="military.html" class="button">Learn More</a>
         <h3> First Rations Bag Bought</h3>
         <p>The first rations bag has been bought! IT has 200 oreos and 200 dabaitu</p>
-        <a href="military.html" class="button">Learn More</a>
+        <a href="re.html" class="button">Learn More</a>
       </div>
 
       <div class="column">
