--- a/index.html
+++ b/index.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html>
+<h2>We are currently fixing some bugs!</h2>
+<h3>Check out the</h3>
+  <div class="navbar">
+      <ul>
+        <li><a href="login.html">Bug Tracker</a></li>
+
+      </ul>
+    </div>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -78,7 +86,7 @@
 
   <script src="app.js"></script>
 </body>
-</html>
+</html> -->
 
 <style>
   * {
