--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <h2>We are currently fixing some bugs!</h2>
-<h3>Check out the</h3>
+<h3>Check out the bug tracker for more info!</h3>
   <div class="navbar">
       <ul>
-        <li><a href="login.html">Bug Tracker</a></li>
+        <li><a href="sitestatus.html">Bug Tracker</a></li>
 
       </ul>
     </div>
