--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Tinland</title>
+  <h1>Sorry!</h1>
+  <h2>The Tinland Site is down Right now!</h2>
+  <h3>Check back later for updates!</h3>
   <style>
     * {
       margin: 0;
@@ -229,7 +232,7 @@
       color: #e0e0e0;
     }
   </style>
-</head>
+<!-- </head>
 <body>
   <div class="welcome-screen" id="welcome-screen">
     <div>
@@ -301,7 +304,7 @@
       <a href="login.html" id="login-btn" class="btn" style="display: none;">Login</a>
       <p id="error-message" class="error-message"></p>
     </section>
-  </main>
+  </main> -->
 
   <script>
     const users = {
