--- a/gov.html
+++ b/gov.html
@@ -1,4 +1,232 @@
-<!DOCTYPE html>
+<title>Tinland</title>
+  <h1>Sorry!</h1>
+  <h2>The Tinland Site is down Right now!</h2>
+  <h3>Check back later for updates!</h3>
+  <style>
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+
+    body {
+      background-color: #121212;
+      color: #e0e0e0;
+      overflow-y: auto;
+    }
+
+    .welcome-screen {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      background-color: #6200ea;
+      color: white;
+      text-align: center;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      z-index: 10;
+      transition: transform 1.5s cubic-bezier(0.23, 1, 0.32, 1), opacity 1.5s ease;
+    }
+
+    .welcome-screen.hidden {
+      transform: translateY(-100%);
+      opacity: 0;
+    }
+
+    .welcome-screen h1 {
+      font-size: 3em;
+      margin-bottom: 20px;
+    }
+
+    .welcome-screen button {
+      background-color: #3700b3;
+      color: white;
+      padding: 15px 30px;
+      border: none;
+      border-radius: 30px;
+      font-size: 1.2em;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+
+    .welcome-screen button:hover {
+      background-color: #23036a;
+    }
+
+    header {
+      background-color: #6200ea;
+      padding: 40px 0;
+      text-align: center;
+      color: white;
+      border-radius: 10px;
+      margin-bottom: 30px;
+    }
+
+    header h1 {
+      font-size: 2.5em;
+      margin-bottom: 10px;
+    }
+
+    header h3 {
+      font-size: 1.5em;
+    }
+
+    main {
+      display: flex;
+      flex-direction: column;
+      gap: 40px;
+    }
+
+    .container {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 20px;
+      width: 100%;
+      max-width: 1200px;
+      margin: 0 auto;
+    }
+
+    .column {
+      background-color: #1c1c1c;
+      padding: 25px;
+      border-radius: 15px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+    }
+
+    h2 {
+      font-size: 2.5em;
+      color: #FF79C6;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    h3 {
+      font-size: 2em;
+      text-align: center;
+    }
+
+    p {
+      color: #B0B0B0;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      font-size: 18px;
+      list-style: none;
+      color: #e0e0e0;
+      padding-left: 0;
+    }
+
+    ul li {
+      margin-bottom: 10px;
+      transition: transform 0.3s ease, color 0.3s ease;
+    }
+
+    ul li:hover {
+      transform: translateX(10px);
+      color: #ffffff;
+    }
+
+    .button {
+      background-color: #6200ea;
+      color: white;
+      padding: 10px 20px;
+      border-radius: 30px;
+      text-decoration: none;
+      text-align: center;
+      font-size: 1em;
+      display: inline-block;
+      transition: background-color 0.3s ease;
+      margin-top: 10px;
+    }
+
+    .button:hover {
+      background-color: #3700b3;
+    }
+
+    @media screen and (max-width: 768px) {
+      .container {
+        grid-template-columns: 1fr;
+      }
+
+      header h1 {
+        font-size: 2em;
+      }
+
+      header h3 {
+        font-size: 1.2em;
+      }
+
+      .column {
+        padding: 20px;
+      }
+
+      .button {
+        padding: 8px 16px;
+        font-size: 0.9em;
+      }
+    }
+
+    .navbar {
+      background-color: #333;
+      position: sticky;
+      top: 0;
+      width: 100%;
+      z-index: 1000;
+    }
+
+    .navbar ul {
+      list-style-type: none;
+      text-align: center;
+      margin: 0;
+      padding: 0;
+    }
+
+    .navbar ul li {
+      display: inline;
+      margin-right: 20px;
+    }
+
+    .navbar ul li a {
+      text-decoration: none;
+      color: white;
+      padding: 15px 20px;
+      display: inline-block;
+    }
+
+    .error-message {
+      color: #ff4d4d;
+      font-size: 1.2em;
+      text-align: center;
+      margin: 20px 0;
+    }
+
+    #login-btn {
+      display: inline-block;
+      background-color: #6200ea;
+      color: white;
+      padding: 12px 24px;
+      border-radius: 25px;
+      font-size: 1em;
+      text-decoration: none;
+      transition: background-color 0.3s ease;
+    }
+
+    #login-btn:hover {
+      background-color: #3700b3;
+    }
+
+    #welcome-message {
+      font-size: 1.5em;
+      text-align: center;
+      margin: 20px 0;
+      color: #e0e0e0;
+    }
+  </style><!-- <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -257,3 +485,4 @@
 
 </body>
 </html>
+ -->
