--- a/index.html
+++ b/index.html
@@ -247,19 +247,27 @@
       <h3>A land of the free</h3>
     </div>
   </header>
-
+-->
+  <h3> To check your account go to login. </h3>
+  <h3>To apply to tinland DM max.</h3>
   <main>
     <div class="navbar">
       <ul>
         <li><a href="login.html">Login</a></li>
-        <li><a href="user-info.html">Your-Page</a></li>
-        <li><a href="tinapedia.html">Tinapedia</a></li>
-        <li><a href="bible.html">Church of Tin</a></li>
-        <li><a href="tinstock.html">Tin Stocks</a></li>
-        <li><a href="nav.html">All Other Pages</a></li>
+        <li><a href="tintube.html">Tin - Tube</a></li>
       </ul>
-    </div>
-
+    </div> 
+    <br>
+    <bt>
+      <p>Test</p>
+    </bt>
+    <h2> Here's why we aren't online right now:</h2>
+    <ul>
+      <li> We have some major bugs we need to take care of</li>
+      <li> We need to fix and update the wording of our site.</li>
+    </ul>
+    <h2>Thank you for visiting! Come back soon!</h2>
+<!--  <---
     <h2>Our Beliefs</h2>
 
     <h3>Freedom of worship</h3>
@@ -443,3 +451,4 @@
   </script>
 </body>
 </html>
+ -->
