--- a/index.html
+++ b/index.html
@@ -41,7 +41,9 @@
       transform: translateY(-100%);
       opacity: 0;
     }
-
+li{
+  text-alaign: center;
+}
     .welcome-screen h1 {
       font-size: 3em;
       margin-bottom: 20px;
@@ -250,6 +252,11 @@
 -->
   <h3> To check your account go to login. </h3>
   <h3>To apply to tinland DM max.</h3>
+  <br>
+  <br>
+  <br>
+  <br>
+  
   <main>
     <div class="navbar">
       <ul>
@@ -258,14 +265,16 @@
       </ul>
     </div> 
     <br>
-    <bt>
-      <p>Test</p>
-    </bt>
+    <br>
+    <br>
     <h2> Here's why we aren't online right now:</h2>
+    <br>
     <ul>
       <li> We have some major bugs we need to take care of</li>
+      <br>
       <li> We need to fix and update the wording of our site.</li>
     </ul>
+    <br>
     <h2>Thank you for visiting! Come back soon!</h2>
 <!--  <---
     <h2>Our Beliefs</h2>
