--- a/docs.html
+++ b/docs.html
@@ -128,12 +128,9 @@
         <header>
             <h1 onclick="goToHomePage()">Tin Docs</h1>
             <input type="text" id="search" placeholder="Search documents" oninput="filterDocuments()">
+            <br>
+            <h3> Disclaimer! This page is a test! It was made with the assistanse of AI.</h3>
         </header>
-        <div class="toolbar">
-            <button onclick="formatText('italic')">Italic</button>
-            <button onclick="formatText('underline')">Underline</button>
-            <button onclick="formatText('strikeThrough')">Strike Through</button>
-        </div>
         <div id="document-list">
             <h2>My Documents</h2>
             <div id="doc-list"></div>
