--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ li{
     <div class="navbar">
       <ul>
         <li><a href="login.html">Login</a></li>
-        <li><a href=docs.html">Tin - docs</a></li>
+        <li><a href=docs.html>Tin - docs</a></li>
       </ul>
     </div> 
     <br>
